# ultrasound_fetal_images

./: .pre-commit-config.yaml  Makefile  README.md  environment.yml  poetry.toml  pyproject.toml  virtual-packages.yml
.github/: release-drafter.yml
.github/workflows/: code-quality-main.yaml  code-quality-pr.yaml  release-drafter.yml  test.yml  tests-pr.yml
configs/: brain_planes_eval.yaml  brain_planes_train.yaml  create_quality_dataset.yaml  eval.yaml  head_segmentation_eval.yaml  head_segmentation_train.yaml  train.yaml  video_quality_eval.yaml  video_quality_train.yaml
configs/callbacks/: brain_planes.yaml  class_image_sampler.yaml  default.yaml  head_segmentation.yaml  learning_rate_monitor.yaml  mix_up.yaml  stochastic_weight_averaging.yaml  video_quality.yaml
configs/data/: brain_planes.yaml  fetal_planes.yaml  head_segmentation.yaml  video_quality.yaml
configs/datamodule/: fetal_planes.yaml
configs/debug/: default.yaml
configs/experiment/: _ra_vf_15_01_12.yaml  _ssim.yaml  brain_planes.yaml  brain_planes_82.yaml  create_quality_dataset_0250.yaml  create_quality_dataset_0500.yaml  create_quality_dataset_2106.yaml  dense_net.yaml  dense_net_best.yaml  example.yaml  head_segmentation.yaml  head_segmentation_attention_unet.yaml  head_segmentation_augm.yaml  head_segmentation_brightness_contrast.yaml  head_segmentation_convnext_tiny.yaml  head_segmentation_convnextv2_tiny.yaml  head_segmentation_deeplabv3plus.yaml  head_segmentation_dicefocal.yaml  head_segmentation_efficientnetv2s.yaml  head_segmentation_elastic.yaml  head_segmentation_focal.yaml  head_segmentation_focaltversky.yaml  head_segmentation_fpn.yaml  head_segmentation_gaussian_blur.yaml  head_segmentation_manet.yaml  head_segmentation_speckle.yaml  head_segmentation_tversky.yaml  head_segmentation_unetpp.yaml  simple_dense_net.yaml  simple_dense_net_example.yaml  video_quality.yaml  video_quality_0.02173.yaml
configs/extras/: default.yaml  plot_video_probabilities.yaml  plot_video_quality.yaml  plot_wrongly_assigned_classes.yaml
configs/hparams_search/: dende_net_optuna.yaml  dense_net_optuna.yaml  fetal_optuna.yaml
configs/logger/: wandb.yaml
configs/model/: brain_planes.yaml  dense_net.yaml  fetal_module.yaml  head_segmentation.yaml  pre_trained.yaml  quality_module.yaml  simple_dense_net.yaml
configs/model/criterion/: dice_ce.yaml  dice_focal.yaml  focal.yaml  focal_tversky.yaml  tversky.yaml
configs/paths/: default.yaml
configs/progressive_training/: brain_planes.yaml
docs/: head_segmentation.md
hydra_plugins/: progressive_training.py
notebooks/: 0.0-az-pytorch-tests.ipynb  0.0-data-preparation.ipynb  1.0-az-initial-data-exploration.ipynb  1.0-fetal-planes-data-preparation.ipynb  1.1-az-tta-exploration.ipynb  1.1-az-video-data-exploration.ipynb  1.1-initial-data-exploration.ipynb  1.2-az-video-data-exploration.ipynb  1.2-az-video-frame-data-exploration.ipynb  1.2-az-video-quality-data-exploration.ipynb  1.2.1-az-video-data-exploration.ipynb  1.3-az-video-frame-data-exploration.ipynb  1.4-az-multimodel.ipynb  2.0-az-densenet.ipynb  2.0-az-initial-data-exploration.ipynb  2.0-fetal-head-segmentation-data-preparation.ipynb  2.1-fetal-head-segmentation-result-visualisation.ipynb  2.2-fetal-head-segmentation-result-visualisation.ipynb  3.0-az-initial-data-exploration.ipynb  3.0-fetal-brain-planes-data-preparation.ipynb  3.1-tta-exploration.ipynb  4.0-diffusion-models.ipynb  4.0-video-data-exploration.ipynb  4.1-video-data-exploration.ipynb  4.2-video-frame-data-exploration.ipynb  5.0-multimodel.ipynb
scripts/: count_usdata.sh  label_videos.py  opencv-python-fix.sh  run_tests.sh  semi-supervised-learning.sh  update-pyproject.py
scripts/configs/: label_videos.yaml
scripts/configs/hydra/: default.yaml
scripts/configs/paths/: default.yaml
src/: brain_planes_eval.py  brain_planes_train.py  create_quality_assesment_dataset.py  create_quality_dataset.py  eval.py  head_segmentation_eval.py  head_segmentation_train.py  train.py  video_quality_train.py
src/data/: brain_planes.py  fetal_planes.py  head_segmentation.py  video_quality.py
src/data/components/: dataset.py  samplers.py  transforms.py
src/data/utils/: __init__.py  google.py  utils.py
src/datamodules/: fetal_planes.py
src/datamodules/components/: dataset.py  (+1 more)
src/models/: brain_planes.py  fetal_module.py  head_segmentation_module.py  mnist_module.py  quality_module.py
src/utils/: __init__.py  instantiators.py  logging_utils.py  plots.py  pylogger.py  rich_utils.py  utils.py
tests/: conftest.py  test_brain_planes_train.py  test_configs.py  test_create_quality_dataset.py  test_eval.py  test_fetal_planes_datamodule.py  test_sweeps.py  test_train.py  test_train_cleanup.py  test_video_quality_eval.py  test_video_quality_train.py
tests/data/: conftest.py  test_fetal_planes_datamodule.py  test_head_segmentation_datamodule.py
tests/e2e/: conftest.py  test_brain_planes_eval.py  test_brain_planes_train.py  test_configs.py  test_head_segmentation_train.py  test_video_quality_train.py
tests/helpers/: package_available.py  run_if.py  run_sh_command.py
tests/models/: test_brain_planes_module.py  test_head_segmentation_module.py
(+30 files in other folders)
