[build-system]
requires = ["poetry-core", ]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
# --------- pytorch --------- #
torch = "2.6.0"
torchvision = "^0.21.0"
lightning = "^2.5.2"
torchmetrics = "^1.8.0"
# --------- hydra --------- #
hydra-core = "1.3.2"
hydra-colorlog = "^1.2.0"
hydra-optuna-sweeper = "^1.2.0"
# --------- data --------- #
pandas = "^2.3.1"
numpy = "^2.2.6"
scipy = "^1.16.1"
jupyter = "^1.1.1"
matplotlib = "^3.10.5"
plotly = "^6.2.0"
scikit-learn = "^1.7.1"
scikit-image = "^0.25.2"
albumentations = "^2.0.8"
opencv-python-headless = "^4.12.0.88"
# --------- loggers --------- #
# tensorboard = "^2.12.0"
wandb = "^0.19.11"
# neptune-client
# mlflow
# comet-ml
# --------- others --------- #
rootutils = "^1.0.7"       # standardizing the project root setup
pre-commit = "^4.2.0"      # hooks for applying linters on commit
rich = "^14.1.0"           # beautiful text formatting in terminal
pytest = "^8.4.1"          # tests
pytest-cov = "^6.2.1"
sh = { version = "^2.2.2", markers = "sys_platform == 'linux' or sys_platform == 'darwin'" }
gdown = "^5.2.0"
fastapi = "^0.115.14"

[tool.pytest.ini_options]
addopts = [
    "--color=yes",
    "--durations=0",
    "--strict-markers",
    "--doctest-modules",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]
log_cli = "True"
markers = [
    "slow: slow tests",
]
minversion = "6.0"
testpaths = "tests/"

[tool.coverage.report]
exclude_lines = [
    "pragma: nocover",
    "raise NotImplementedError",
    "raise NotImplementedError()",
    "if __name__ == .__main__.:",
]
