[build-system]
requires = ["poetry-core", ]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "3.12.*"
# --------- pytorch --------- #
torch = "2.12.0"
torchvision = "0.27.0"
lightning = "^2.6.5"
torchmetrics = "^1.9.0"
segmentation-models-pytorch = "^0.5.0"
# --------- hydra --------- #
hydra-core = "1.3.3"
hydra-colorlog = "^1.2.0"
hydra-optuna-sweeper = "^1.2.0"
# --------- data --------- #
pandas = "^3.0.3"
numpy = "^2.4.6"
scipy = "^1.17.1"
jupyter = "^1.1.1"
matplotlib = "^3.11.0"
plotly = "^6.8.0"
scikit-learn = "^1.9.0"
scikit-image = "^0.26.0"
albumentations = "^2.0.8"
opencv-python-headless = "^4.13.0.92"
# --------- loggers --------- #
# tensorboard = "^2.12.0"
wandb = "^0.27.2"
# neptune-client
# mlflow
# comet-ml
# --------- others --------- #
rootutils = "^1.0.7"       # standardizing the project root setup
pre-commit = "^4.6.0"      # hooks for applying linters on commit
rich = "^15.0.0"           # beautiful text formatting in terminal
pytest = "^9.1.1"          # tests
pytest-cov = "^7.1.0"
sh = { version = "^2.3.0", markers = "sys_platform == 'linux' or sys_platform == 'darwin'" }
gdown = "^6.1.0"
fastapi = "^0.137.2"
ipympl = "^0.10.0"

[tool.pytest.ini_options]
addopts = [
    "--color=yes",
    "--durations=0",
    "--strict-markers",
    "--doctest-modules",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]
log_cli = "True"
markers = [
    "slow: slow tests",
]
minversion = "6.0"
testpaths = "tests/"

[tool.coverage.report]
exclude_lines = [
    "pragma: nocover",
    "raise NotImplementedError",
    "raise NotImplementedError()",
    "if __name__ == .__main__.:",
]
